cmake_minimum_required(VERSION 3.8.2)
project(code)

set(CMAKE_CXX_STANDARD 11)

add_executable(code main.cpp)
add_executable(chess chess.cpp)
add_executable(carpet carpet1003.cpp)
add_executable(pick square_pick.cpp)
add_executable(balloon blust_balloon.cpp)
add_executable(903 did903.cpp)
add_executable(lnr longest_none_repeat.cpp)
add_executable(std_rd student_record.cpp)
add_executable(remove remove_box.cpp)
add_executable(lru lru.cpp)
add_executable(322 coin_change322.cpp)
add_executable(945 min_increment945.cpp)